--- a/.github/workflows/deploy-theme.yml
+++ b/.github/workflows/deploy-theme.yml
@@ -15,5 +15,5 @@ jobs:
         working-directory: ./src
         run: npm run deploy
         env:
-          GHOST_ADMIN_API_URL: ${{ secrets.https://josvisserict.nl }}
-          GHOST_ADMIN_API_KEY: ${{ secrets.5e8a134c683a2c00010acdf0:946795fc3e118f0bd543f8c09e52d2da9175d6987efa2a73eef053be91f1b8ab }}
+          GHOST_ADMIN_API_URL: ${{ secrets.GHOST_ADMIN_API_URL }}
+          GHOST_ADMIN_API_KEY: ${{ secrets.GHOST_ADMIN_API_KEY }}
